--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li class="sidebar-nav-item"><a href="#about">More About Me</a></li>
                 <li class="sidebar-nav-item"><a href="#services">Services</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
+		<li class="sidebar-nav-item"><a href="#skills">Skills</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Catch Up</a></li>
             </ul>
         </nav>
@@ -256,7 +257,7 @@
         </section>
         <!-- Call to Action-->
         <section class="content-section text-black-50">
-            <div class="container px-4 px-lg-5 text-center">
+            <div class="container px-4 px-lg-5 text-center" id="skills">
                 <h2 class="mb-5">skills</h2>
                 <br><br><br>
                 <!--<a class="btn btn-xl btn-light me-4" href="https://www.linkedin.com/in/siddhika-gajare-6a2866145/">LinkedIn</a>
