--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/SiddhikaGajare/The-Iris-Dataset">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">The Iris Dataset</div>
