--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                     <p class="mb-0">This dataset consists of reviews from amazon. </p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="" alt="..." />
                         </a>
                     </div>
                 </div>
