--- a/index.html
+++ b/index.html
@@ -204,52 +204,56 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Recent Projects</h2>
+                    <h2 class="mb-5">Machine Learning Projects</h2>
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="https://github.com/SiddhikaGajare/The-Iris-Dataset">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">The Iris Dataset</div>
-                                    <p class="mb-0">The Iris Dataset contains four features (length and width of sepals and petals) of 50 samples of three species of Iris (Iris setosa, Iris virginica and Iris versicolor).</p>
+                                    <div class="h1">Exploratory Data Analysis</div>
+                                    <p class="mb-0">Data Representation and Analysis on Datasets to spot anomalies and 
+                                        check assumptions with the help of summary statistics and graphical representations.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/IrisImage.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/eda.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Haberman Breast Cancer Survival Dataset</div>
-                                    <p class="mb-0">The dataset describes breast cancer patient data and the outcome is patient survival.</p>
+                                    <div class="h1">Regression Problems</div>
+                                    <p class="mb-0">Linear Regression, Ridge Regression, Neural Network Regression, 
+                                        Lasso Regression, Decision Tree Regression, Random Forest, KNN, Support Vector Machine (SVM)</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/Reg.png" alt="..."/>
                         </a>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Titanic Survival Prediction</div>
-                                    <p class="mb-0">Dataset to predict which passengers on board the ship would survive and then another prediction to see if we would’ve survived.
+                                    <div class="h1">Natural Language Programming</div>
+                                    <p class="mb-0">Sentiment Analysis, Text Summarization, Aspect Mining(Part of Speech Tagging), 
+                                        Topic Modeling.
                                     </p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/nlp.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Amazon Fine Food Reviews Dataset</div>
-                                    <p class="mb-0">This dataset consists of reviews from amazon. </p>
+                                    <div class="h1">Classification Problems</div>
+                                    <p class="mb-0">Logistic Regression, Decision Trees, Random Forest, Naive Bayes, 
+                                        KNN, Support Vector Machine(Kernel), etc.  </p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/class.png" alt="..." />
                         </a>
                     </div>
                 </div>
