Latest changes on Summary

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>“You can have data without information, but you cannot have information without data.” - Daniel Keys Moran</h2>
-                        <p class="lead mb-5">
+                        <h2>“You can have data without information, but you cannot have information without data.” <i><h3>- Daniel Keys Moran</i></h3></h2>
+                        <p class="lead mb-5"><br><br>
                             With the immense amount of data captured over the years, its time to leverage and unleash the miraculous potential it holds. As an aspiring Data Enthusiast I aim to bring out more from these resources to the fullest. 
-                            I have Master's in Computer Science with specialization in Machine Learning, and have worked as a Performance Test Engineer for 2 years during the course. 
+                            I have Master's in Computer Science with specialization in Machine Learning, and have worked as a Data Analyst and Machine Learning Engineer for 2 years during the course of work at my current and previous organizations. 
                         </p>
                         <p class="lead mb-5">
-                            I have developed Independent Full stack Projects with certain frameworks.
-                            I have performed EDA on multiple projects in the inital days as an Machine Learning Enthusiast. 
-                            I have also have experience working on Natural Language Processing for few Datasets as well.
+                            I have worked upon various Regression and Classification Problems.
+                            Have worked on initial Data Analysis, Visualization, Data Pre-Processing, Feature Selection, Model Building, Hyper Parameter Tuning, Model Evaluation and Prediction. 
+                            Performed Sentiment Analysis, Named Entity Relationship and solve classification problems using Natural Language Processing for few Datasets as well.
                         </p>
                         <a class="social-link rounded-circle text-black-50" href="#services"><i class="fa fa-angle-down fa-3x"></i></a>
                         <!--<a class="btn btn-dark btn-xl" href="#services"><i class="icon-arrow-down"></i></a>
