--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <a class="portfolio-item" href="https://github.com/SiddhikaGajare/The-Iris-Dataset">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Exploratory Data Analysis</div>
+                                    <div class="h1">Machine Learning Projects</div>
                                     <p class="mb-0">Data Representation and Analysis on Datasets to spot anomalies and 
                                         check assumptions with the help of summary statistics and graphical representations.</p>
                                 </div>
@@ -220,10 +220,10 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/SiddhikaGajare/Time-Series-Analysis">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Regression Problems</div>
+                                    <div class="h1">Time Series Analysis</div>
                                     <p class="mb-0">Linear Regression, Ridge Regression, Neural Network Regression, 
                                         Lasso Regression, Decision Tree Regression, Random Forest, KNN, Support Vector Machine (SVM)</p>
                                 </div>
@@ -232,7 +232,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/SiddhikaGajare/NLP-Projects">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">Natural Language Programming</div>
@@ -245,10 +245,10 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/SiddhikaGajare/Deep-Learning-Projects">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Classification Problems</div>
+                                    <div class="h1">Deep Learning Projects</div>
                                     <p class="mb-0">Logistic Regression, Decision Trees, Random Forest, Naive Bayes, 
                                         KNN, Support Vector Machine(Kernel), etc.  </p>
                                 </div>
