--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="https://github.com/SiddhikaGajare/The-Iris-Dataset">
+                        <a class="portfolio-item" href="https://github.com/SiddhikaGajare/Machine-Learning-Projects">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">Machine Learning Projects</div>
-                                    <p class="mb-0">Data Representation and Analysis on Datasets to spot anomalies and 
-                                        check assumptions with the help of summary statistics and graphical representations.</p>
+                                    <p class="mb-0">Computer algorithms that process with an immense amount of data which 
+                                         analyze and make data-driven recommendations and decisions based on only the input data.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/eda.png" alt="..." />
@@ -224,8 +224,9 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">Time Series Analysis</div>
-                                    <p class="mb-0">Linear Regression, Ridge Regression, Neural Network Regression, 
-                                        Lasso Regression, Decision Tree Regression, Random Forest, KNN, Support Vector Machine (SVM)</p>
+                                    <p class="mb-0">Time series forecasting is a technique for the prediction of events through a sequence of time. 
+                                        It predicts future events by analyzing the trends of the past, on the assumption that future trends 
+                                        will hold similar to historical trends.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/Reg.png" alt="..."/>
@@ -249,8 +250,8 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">Deep Learning Projects</div>
-                                    <p class="mb-0">Logistic Regression, Decision Trees, Random Forest, Naive Bayes, 
-                                        KNN, Support Vector Machine(Kernel), etc.  </p>
+                                    <p class="mb-0">Deep Learning really shines when it comes to complex 
+                                        problems such as image classification, natural language processing, and speech recognition.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/class.png" alt="..." />
