--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                             Have worked on initial Data Analysis, Visualization, Data Pre-Processing, Feature Selection, Model Building, Hyper Parameter Tuning, Model Evaluation and Prediction. 
                             Performed Sentiment Analysis, Named Entity Relationship and solve classification problems using Natural Language Processing for few Datasets as well.
                         </p>
+                        <p class="lead mb-5">
+                            Have done Time Series Forecasting using relevant techniques such as ARIMA, auto-ARIMA and SARIMAX.
+                            
+                            Perfomed Image Recongnition using MLP, CNN and RNN. Have used Deep Learning models to solve common Machine Learning Problems.
+                        </p>
                         <a class="social-link rounded-circle text-black-50" href="#services"><i class="fa fa-angle-down fa-3x"></i></a>
                         <!--<a class="btn btn-dark btn-xl" href="#services"><i class="icon-arrow-down"></i></a>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>-->
