--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <p class="lead mb-5">
                             Have done Time Series Forecasting using relevant techniques such as ARIMA, auto-ARIMA and SARIMAX.
                             
-                            Perfomed Image Recongnition using MLP, CNN and RNN. Have used Deep Learning models to solve common Machine Learning Problems.
+                            Performed Image Recongnition using MLP, CNN and RNN. Have used Deep Learning models to solve common Machine Learning Problems.
                         </p>
                         <a class="social-link rounded-circle text-black-50" href="#services"><i class="fa fa-angle-down fa-3x"></i></a>
                         <!--<a class="btn btn-dark btn-xl" href="#services"><i class="icon-arrow-down"></i></a>
