--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <a class="portfolio-item" href="https://github.com/SiddhikaGajare/NLP-Projects">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h1">Natural Language Programming</div>
+                                    <div class="h1">Natural Language Processing</div>
                                     <p class="mb-0">Sentiment Analysis, Text Summarization, Aspect Mining(Part of Speech Tagging), 
                                         Topic Modeling.
                                     </p>
